<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalleContacto">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="17dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mascota_favorita"
                android:textSize="25sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imgFotoFavorito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/mascota1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_contacto"
                android:textSize="@dimen/txt_size_detalle"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/tvNombreFavorito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_detalle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono_contacto_detalle"
                android:textSize="@dimen/txt_size_detalle"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/tvTelefonoFavorito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_detalle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_de_contacto_detalle"
                android:textSize="@dimen/txt_size_detalle"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/tvEmailFavorito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_detalle"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>